2000-12-06  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sockaddr_ntop): omit scope id.
	
	* main.c (main): initialize ftp_host et al before getting initial
	directory.
	
	* ftp.c, mkbind.c, readdir.c, sockets.c, status.c, tag.c, tty.c:
	code cleanup for -Wall.
	
	* mkfntab-h.m4: emit correct prototypes for bindable functions.
	
	* functions.h: move aux_* prototypes from fn_select here
	(aux_download used in main.c)
	
	* util.h: fix function name in prototype.
	* getaddrinfo.c (getaddrinfo): don't free airet before it is
	initialized.
	* ftp.c (ftp_port): fix endianness bug.

2000-12-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sockaddr_ntop): work around mising sa_len.
	* configure.in: check for member sa_len of struct sockaddr.
	* acinclude.m4 (NIH_HAVE_STRUCT_MEMBER): generic check for a
	member of a struct.

	* ftp.c (ftp_port): support for inet6.
	(ftp_addr, ftp_gethostaddr): store address in struct
	sockaddr_storage for protocol independence.

	* sockets.c (sopen): new version with inet6 support.
	(spassive): new version with inet6 support.
	(sockaddr_ntop): new function.

	* configure.in: check for struct sockaddr_storage.
	* acinclude.m4 (NIH_HAVE_STRUCT): generic check for a struct.

2000-12-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: check for presence of getaddrinfo.
	* getaddrinfo.c: new replacement function.

2000-11-26  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (read_dir): don't call pfunc[npfunc], as it doesn't
	exist.
	(parse_unix): recognize lines where there is no space between
	permissions and number of links (as is the case on some servers on
	files with more than 99 links).

2000-10-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: search for tgetent in libc (needed on Darvin).

2000-10-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): include hostname in connect error message.

2000-06-28  Dieter Baron  <dillo@danbala.tuwien.ac.at>
